[package]
name = "rify"
version = "0.1.0"
authors = ["Andrew Dirksen <andrew@dirksen.com>"]
edition = "2018"
description = """
RDF reasoner that operates on RIF-like conjunctive rules. Outputs a machine
readable proof of some claim which can be cheaply verified.
"""

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true, features = ["serde-serialize"] }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }

[features]
default = ["std", "js-library-wasm"]
js-library-wasm = ["wasm-bindgen", "serde", "serde_json"]
std = []
