[package]
name = "rify"
version = "0.6.0"
authors = [
  "Andrew Dirksen <andrew@dirksen.com>",
  "Sam Hellawell <sshellawell@gmail.com>"
]
edition = "2018"
description = """
RDF reasoner that operates on RIF-like conjunctive rules. Outputs a machine
readable proof of some claim which can be cheaply verified.
"""
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rify"
readme = "README.md"
repository = "https://github.com/docknetwork/rify"

[lib]
crate-type = ["lib"]

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
rify = { path = ".", features = [ "serde", "std" ] } # enables these features for tests
serde_json = "1"

[features]
default = []
std = []
